from pydantic import BaseModel as BaseM


class BaseModel(BaseM): ...
