import time

import allure

from src.main.api.configs.timeouts import TimeoutConfig
from src.main.api.configuration.client import (
    BuildStepConfiguration,
    TeamCityConfigurationClient,
)
from src.main.api.models.create_build_step_request import CreateBuildStepRequest


class ConfigurationSteps:
    def __init__(self, client: TeamCityConfigurationClient | None = None):
        self.client = client or TeamCityConfigurationClient()
        self.timeout = TimeoutConfig.configuration_wait_seconds()
        self.poll_interval = TimeoutConfig.configuration_poll_interval_seconds()

    @allure.step("Verify build step {step_id} is persisted in TeamCity configuration")
    def verify_build_step_persisted(
        self,
        project_id: str,
        build_configuration_id: str,
        step_id: str,
        expected_step: CreateBuildStepRequest,
    ) -> BuildStepConfiguration:
        deadline = time.monotonic() + self.timeout
        last_step: BuildStepConfiguration | None = None
        last_error: Exception | None = None
        while time.monotonic() < deadline:
            try:
                last_step = self.client.get_build_step(
                    project_id, build_configuration_id, step_id
                )
                if last_step is not None:
                    expected_parameters = {
                        item.name: item.value
                        for item in expected_step.properties.property
                    }
                    assert last_step.name == expected_step.name
                    assert last_step.type == expected_step.type
                    assert last_step.parameters == expected_parameters
                    return last_step
            except FileNotFoundError as error:
                last_error = error
            time.sleep(self.poll_interval)

        details = str(last_error) if last_error else "runner was not found in XML"
        raise AssertionError(
            f"Build step {step_id!r} was not persisted in TeamCity configuration: "
            f"{details}"
        )

    @allure.step("Verify build step {step_id} is deleted from TeamCity configuration")
    def verify_build_step_deleted(
        self, project_id: str, build_configuration_id: str, step_id: str
    ) -> None:
        deadline = time.monotonic() + self.timeout
        last_error: Exception | None = None
        while time.monotonic() < deadline:
            try:
                if (
                    self.client.get_build_step(
                        project_id, build_configuration_id, step_id
                    )
                    is None
                ):
                    return
            except FileNotFoundError as error:
                last_error = error
            time.sleep(self.poll_interval)

        details = str(last_error) if last_error else "runner is still present in XML"
        raise AssertionError(
            f"Build step {step_id!r} was not deleted from TeamCity configuration: "
            f"{details}"
        )
